--- a/templates/statistics_month.html
+++ b/templates/statistics_month.html
@@ -3,14 +3,14 @@
 {% block content %}
 <ul class="nav nav-tabs justify-content-center">
     <li class="nav-item">
-        <a class="nav-link" href="/statistics/month">Продажи блюда по кварталам</a>
+        <a class="nav-link" href="/statistics/month">Заказы блюда по кварталам</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/statistics/day">День с лучшими продажами</a>
+        <a class="nav-link" href="/statistics/day">Лучшие заказы</a>
     </li>
 </ul>
 <div class="container">
-    <h1>Статистика заказов блюд по месяцам</h1>
+    <h1 class="display-4 text-center">Статистика заказов блюд по кварталам</h1>
     <table class="table table-striped">
         <thead>
         <tr>
@@ -27,17 +27,20 @@
             <td>50</td>
             <td>30</td>
             <td>20</td>
+            <td>20</td>
         </tr>
         <tr>
             <td>Солянка</td>
             <td>40</td>
             <td>35</td>
             <td>25</td>
+            <td>25</td>
         </tr>
         <tr>
             <td>Оливье</td>
             <td>45</td>
             <td>28</td>
+            <td>22</td>
             <td>22</td>
         </tr>
         </tbody>
