дизайн главной страницы

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <div class="col my-auto">
         <h1 class="display-1 main-display">Corporate<br>Dinner Dash</h1>
         <p class="lead main-lead">Закажите вкусные блюда и бронируйте столики у нас прямо сейчас!</p>
-        <a href="/menu/first" class="btn btn-outline-login">Заказать</a>
+        <a href="/menu/first" class="btn-lg btn-outline-login">Заказать</a>
     </div>
 </div>
 <div class="container mt-5">
@@ -55,7 +55,7 @@
                                   fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Напитки</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Ароматный кофе, свежий чай и прохладительные напитки — твой заряд бодрости на весь день!</p>
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                                   fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Десерты</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Наши десерты – отличная возможность порадовать себя сладостным блюдом в разгар рабочего дня</p>
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
                 </div>
