--- a/templates/main.html
+++ b/templates/main.html
@@ -78,25 +78,38 @@
         </div>
     </div>
     <h2 class="my-5 text-center">О нас</h2>
-    <div class="row">
-        <div class="col">
-            <h3 class="main-h">Готовые комплексные обеды</h3>
-            <p class="lead main-text" style="font-size: 24px;">У нас есть несколько готовых вариантов бизнес-ланча, чтобы Вам было проще выбирать</p>
+    <div>
+        <div class="row">
+            <div class="col">
+                <h3 class="main-h">Готовые комплексные обеды</h3>
+                <p class="main-text" style="font-size: 24px;">У нас есть несколько готовых вариантов бизнес-ланча, чтобы Вам было проще выбирать</p>
+            </div>
+            <div class="col">
+                <h3 class="main-h">Регулярное обновление меню</h3>
+                <p class="main-text" style="font-size: 24px;">Мы обновляем позиции в меню каждую неделю</p>
+            </div>
         </div>
-        <div class="col">
-            <h3 class="main-h">Регулярное обновление меню</h3>
-            <p class="lead main-text" style="font-size: 24px;">Мы обновляем позиции в меню каждую неделю</p>
+        <div class="row">
+            <div class="col">
+                <h3 class="main-h">Доставка</h3>
+                <p class="main-text" style="font-size: 24px;">У нас есть доставка блюд до рабочего места</p>
+            </div>
+            <div class="col">
+                <h3 class="main-h">Заказ и бронирование</h3>
+                <p class="main-text" style="font-size: 24px;">Вы можете заранее онлайн выбрать блюда и забронировать место на нужное время</p>
+            </div>
         </div>
     </div>
+    <h2 class="my-5 text-center">Новости</h2>
     <div class="row">
-        <div class="col">
-            <h3 class="main-h">Доставка</h3>
-            <p class="lead main-text" style="font-size: 24px;">У нас есть доставка блюд до рабочего места</p>
+        <div class="col-2">
+            <img src="{{ url_for('static', filename='img/new.png') }}" alt=''>
         </div>
-        <div class="col">
-            <h3 class="main-h">Заказ и бронирование</h3>
-            <p class="lead main-text" style="font-size: 24px;">Вы можете заранее онлайн выбрать блюда и забронировать место на нужное время</p>
+        <div class="col-8">
+            <h3 class="main-h">Новость</h3>
+            <p class="lead main-text" style="font-size: 24px;">блблбаллбвблалвалвабвлавблавблавлабвблавлбвбабвлалва<br>блвабвлбавблаблвблвлбавблаблваблвалбавлвлбаблвавааблвблаалбавлбавлааббаблаблалбаблаблаблаблаблаблаблаблабабблаблаблалбаблаблаблаблаблабл</p>
         </div>
     </div>
+    <hr>
 </div>
 {% endblock %}
