--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/menu/first">Меню</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/lunch">Бизнес-ланчи</a>
+                <a class="nav-link" href="/menu/lunch">Бизнес-ланчи</a>
             </li>
             {% if current_user.is_authenticated %}
             {% if current_user.role == "admin"%}
