--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,6 +3,13 @@
 {% block content %}
 <ul class="nav justify-content-center mt-3">
     <li class="nav-item">
+        <a class="nav-link" href="/menu/lunch">
+            <button class="btn category">
+                Бизнес-ланчи
+            </button>
+        </a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="/menu/breakfast">
             <button class="btn category">
                 Завтраки
