--- a/templates/main.html
+++ b/templates/main.html
@@ -55,11 +55,8 @@
                                   fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Напитки</h5>
-<<<<<<< HEAD
                         <p class="card-text"></p>
-=======
                         <p class="card-text">Ароматный кофе, свежий чай и прохладительные напитки — твой заряд бодрости на весь день!</p>
->>>>>>> origin/frontend_beta
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
                 </div>
@@ -139,6 +136,6 @@
         <h2 class="text-center">Обратная связь</h2>
 
     </div>
-"></div>
+</div>
 </div>
 {% endblock %}
