--- a/templates/main.html
+++ b/templates/main.html
@@ -55,6 +55,7 @@
                                   fill="#A77A58"/>
                         </svg>
                         <h5 class="card-title">Напитки</h5>
+                        <p class="card-text"></p>
                         <p class="card-text">Ароматный кофе, свежий чай и прохладительные напитки — твой заряд бодрости на весь день!</p>
                         <a href="/menu/breakfast" class="main-btn">Посмотреть</a>
                     </div>
@@ -135,6 +136,6 @@
         <h2 class="text-center">Обратная связь</h2>
 
     </div>
-"></div>
+</div>
 </div>
 {% endblock %}
