--- a/templates/menu.html
+++ b/templates/menu.html
@@ -103,7 +103,7 @@
                                 <a href="/menu/rate/{{ item['type'] }}/3/{{ item['text_id'] }}" class="star">&#9733;</a>
                                 <a href="/menu/rate/{{ item['type'] }}/2/{{ item['text_id'] }}" class="star">&#9733;</a>
                                 <a href="/menu/rate/{{ item['type'] }}/1/{{ item['text_id'] }}" class="star">&#9733;</a>
-                                <span class="rating">5.0</span>
+                                <span class="rating">{{ item["rating"] }}</span>
                             </div>
                             <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Закрыть">✕</button>
                         </div>
