--- a/templates/main.html
+++ b/templates/main.html
@@ -133,9 +133,17 @@
     </div>
     <hr>
     <div class="jumbotron jumbotron-fluid">
-        <h2 class="text-center">Обратная связь</h2>
-
+        <div class="row justify-content-center my-5">
+            <div class="col-md-offset-3 col-md-6">
+                <form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
+                    <h2 class="heading">Обратная связь</h2>
+                    {{ form.hidden_tag() }}
+                    {{ form.message(class="form-control") }}<br>
+                    {{ form.wishes(class="form-control") }}<br>
+                    {{ form.submit(type="submit", class="btn btn-login") }}
+                </form>
+            </div>
+        </div>
     </div>
-</div>
 </div>
 {% endblock %}
